Bug 104131 - REGRESSION (r136683): css3/calc/background-position-parsing.html failing on EFL Linux 64-bit Debug WK2
Summary: REGRESSION (r136683): css3/calc/background-position-parsing.html failing on E...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alexis Menard (darktears)
URL: http://build.webkit.org/results/EFL%2...
Keywords: LayoutTestFailure, MakingBotsRed, Regression
: 104133 (view as bug list)
Depends on:
Blocks: 104014
  Show dependency treegraph
 
Reported: 2012-12-05 09:10 PST by Thiago Marcos P. Santos
Modified: 2012-12-05 13:39 PST (History)
9 users (show)

See Also:


Attachments
backtrace (135 bytes, text/plain)
2012-12-05 09:10 PST, Thiago Marcos P. Santos
no flags Details
Patch (2.38 KB, patch)
2012-12-05 09:39 PST, Alexis Menard (darktears)
no flags Details | Formatted Diff | Diff
Patch (2.50 KB, patch)
2012-12-05 09:45 PST, Alexis Menard (darktears)
no flags Details | Formatted Diff | Diff
Fix comment (2.49 KB, patch)
2012-12-05 10:21 PST, Alexis Menard (darktears)
no flags Details | Formatted Diff | Diff
Patch (4.03 KB, patch)
2012-12-05 12:41 PST, Alexis Menard (darktears)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Alexis Menard (darktears) 2012-12-05 09:23:27 PST
*** Bug 104133 has been marked as a duplicate of this bug. ***
Comment 2 Alexis Menard (darktears) 2012-12-05 09:39:13 PST
Created attachment 177779 [details]
Patch
Comment 3 Alexis Menard (darktears) 2012-12-05 09:39:44 PST
(In reply to comment #2)
> Created an attachment (id=177779) [details]
> Patch

I'm wondering if the fix should go in isPositionValue instead. Thoughts?
Comment 4 Alexis Menard (darktears) 2012-12-05 09:45:58 PST
Created attachment 177782 [details]
Patch
Comment 5 Alexis Menard (darktears) 2012-12-05 10:21:02 PST
Created attachment 177787 [details]
Fix comment
Comment 6 Anders Carlsson 2012-12-05 12:00:31 PST
Comment on attachment 177787 [details]
Fix comment

View in context: https://bugs.webkit.org/attachment.cgi?id=177787&action=review

> Source/WebCore/css/CSSParser.cpp:3865
> +    m_parsedCalculation.release();

This should be m_parsedCalculation = nullptr;
Comment 7 Antti Koivisto 2012-12-05 12:01:52 PST
Comment on attachment 177787 [details]
Fix comment

View in context: https://bugs.webkit.org/attachment.cgi?id=177787&action=review

> Source/WebCore/css/CSSParser.cpp:3867
>  inline bool CSSParser::isPositionValue(CSSParserValue* value)
>  {
> -    return isBackgroundPositionKeyword(value->id) || validUnit(value, FPercent | FLength);
> +    bool ret = isBackgroundPositionKeyword(value->id) || validUnit(value, FPercent | FLength);
> +    // validUnit may encounter a CSS calc() and could potentially set m_parsedCalculation to a value. As we may call later isPositionValue again
> +    // we need to unset it otherwise the next call to validUnit will assert when it will check a calc again. parseFillPositionComponent also workaround this behavior.
> +    m_parsedCalculation.release();
> +    return ret;
>  }

It seems wrong that a isFoo function has a side effect like this.
Comment 8 Alexis Menard (darktears) 2012-12-05 12:41:42 PST
Created attachment 177811 [details]
Patch
Comment 9 WebKit Review Bot 2012-12-05 13:39:47 PST
Comment on attachment 177811 [details]
Patch

Clearing flags on attachment: 177811

Committed r136754: <http://trac.webkit.org/changeset/136754>
Comment 10 WebKit Review Bot 2012-12-05 13:39:51 PST
All reviewed patches have been landed.  Closing bug.